--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -654,7 +654,7 @@ server:
 
     annotations: {}
     labels: {}
-    clusterIP: ""
+    nodeport: ""
 
     ## List of IP addresses at which the Prometheus server service is available
     ## Ref: https://kubernetes.io/docs/concepts/services-networking/service/#external-ips
@@ -665,7 +665,7 @@ server:
     loadBalancerSourceRanges: []
     servicePort: 80
     sessionAffinity: None
-    type: ClusterIP
+    type: NodePort
 
     ## Enable gRPC port on service to allow auto discovery with thanos-querier
     gRPC:
