--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -654,7 +654,7 @@ server:
 
     annotations: {}
     labels: {}
-    nodeport: ""
+    clusterIP: ""
 
     ## List of IP addresses at which the Prometheus server service is available
     ## Ref: https://kubernetes.io/docs/concepts/services-networking/service/#external-ips
